--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@mipmap/icon"
+        android:icon="@drawable/weixin_20190617164843"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/icon"
+        android:roundIcon="@drawable/weixin_20190617164843"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
